anneal/tests/fixtures/unsound_is_valid_error/expected.stderr
anneal::unsoundness

  × Unsoundness error: `isValid` annotations are unsound and require the
  │ --unsound-allow-is-valid flag.
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:1]
 1 │ /// ```anneal
   · ──────┬──────
   ·       ╰── problematic block
 2 │ /// isValid self := true
   ╰────

Error: Validation failed: Naming collisions or missing proofs detected.
